docs: update README, CHANGELOG, and MIGRATION_GUIDE for Java 17/21 modernization